文言を変更

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	</style>
 </head>
 <body>
-<div class="classname">Hello JetBrains</div>
+<div class="classname">Hello IntelliJ IDEA</div>
 <script src="hello.js"></script>
-<script>document.write(max(1999, 2000))</script>
+<script>document.write(max(2000, 2017));</script>
+<script>document.write(max(2000, 2017));</script>
 </body>
 </html>
