--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</style>
 </head>
 <body>
-<div class="classname">Hello JetBrains</div>
+<div class="classname">Hello World</div>
 <script src="hello.js"></script>
 <script>document.write(max(1999, 2000))</script>
 </body>
